feat(reworked): Completely reworked